Fix exp button alignment

--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,8 @@
 .bg-exp {
   background-attachment: initial;
 }
+
+body {
+  height: 100%;
+  overflow: scroll;
+}
